# scouloring-rs

./: Cargo.toml
palettes/: cmyk.json  mono2.json  mono4.json  mono5.json  mono5web.json  mono8.json  rgb.json  rgbcmyk.json  test.py  websafe.json
src/: color.rs  dithering_methods.rs  lib.rs  main.rs  palette.rs
