[package]
name = "scouloring-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hex_color = { version = "3.0.0", features = ["serde"] }
image = { version = "0.25.9", features = ["rayon"] }
oklab = "1.1.2"
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
